<resources>
    <string name="app_name">MA Collection</string>
    <string name="selamat">SELAMAT</string>
    <string name="login">LOGIN</string>
    <string name="datang">DATANG</string>
    <string name="daftar">DAFTAR</string>
    <string name="buat">BUAT</string>
    <string name="search">SEARCH</string>
    <string name="akun">AKUN</string>
    <string name="baru">BARU</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="codenumber">Code Number</string>
    <string name="masuk">MASUK</string>
    <string name="lupapassword">LUPA PASSWORD</string>
    <string name="customharga">CUSTOM HARGA</string>
    <string name="pelanggan">PELANGGAN</string>
    <string name="transaksi">TRANSAKSI</string>
    <string name="fingerprint">FINGERPRINT</string>
    <string name="passcode">PASSCODE</string>
    <string name="kalimatpasscode1">Masukkan 4 Digit Angka</string>
    <string name="kalimatpasscode2">Passcode Anda</string>
    <string name="angka1">1</string>
    <string name="angka2">2</string>
    <string name="angka3">3</string>
    <string name="angka4">4</string>
    <string name="angka5">5</string>
    <string name="angka6">6</string>
    <string name="angka7">7</string>
    <string name="angka8">8</string>
    <string name="angka9">9</string>
    <string name="angka0">0</string>
    <string name="hapus">hapus</string>
    <string name="pilihpelanggan">PILIH PELANGGAN</string>
    <string name="pilihtransaksi">PILIH TRANSAKSI</string>
    <string name="caripelanggan">KETIK NAMA PELANGGAN</string>
    <string name="tulisanpemasukanatas">PEMASUKAN BULAN INI</string>
    <string name="nominal">Rp. 975.000</string>
    <string name="bookmark">Bookmark</string>
    <string name="penjelasanbookmark">Pelanggan yang difavoritkan</string>
    <string name="penjelasansearch">Cari Pelanggan</string>
    <string name="more">Setting</string>
    <string name="penjelasanmore">Pengaturan dan Lainnya</string>
    <string name="titlebaratassetting">Pengaturan dan lainnya</string>
    <string name="produk">Produk</string>
    <string name= "riwayattransaksi">Riwayat Transaksi</string>

</resources>