<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaftarAwal"
    android:background="@drawable/background1">


    <EditText
        android:id="@+id/kolomusername2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/codenumber"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttondaftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttondaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:ems="13"
        android:text="@string/daftar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tulisanbuat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/buat"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tulisanakun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akun"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tulisanbuat" />

    <TextView
        android:id="@+id/tulisanbaru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baru"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/kolomusername2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tulisanakun"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:onClick="pindahkelogin"
            android:text="@string/masuk"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="MASUK" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>