<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".laporanpenjualan"
    android:background="@drawable/backgroundgradient2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barataspelanggan1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableuangmasukatas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarlaporanpenjualan"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/barataspelanggan"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            app:title="@string/pilihpelanggan" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/tableuangmasukatas"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/bglayoutstatistik"
        android:orientation="vertical"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tableuangmasukbawah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/tulisanpemasukanatas"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nominal"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tableuangmasukbawah"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/bglayoutstatistik"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>